--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python: Module",
             "type": "python",
             "request": "launch",
-            "module": "main.py",
+            "module": "main",
             "console": "internalConsole",
             "cwd": "${workspaceFolder}/"
         }
